--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-status": "^1.5.3",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "passport": "^0.6.0",
