--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "jest": "^29.3.1",
