--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "beta_blog_backend",
   "version": "1.0.0",
   "description": "a blog backend",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "set NODE_ENV=production&& node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -35,8 +34,6 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
-    "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.1"
+    "nodemon": "^2.0.20"
   }
 }
